# amaterasu

./: Makefile  README.md  app.py  app2.py  pyproject.toml  setup.py  sleeping_stream.py  threads.py  ui.py
amaterasu/: ml.py  server.py  threaded_io.py  ui.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: Untitled.ipynb  knn.model
src/: cute_names.py  threaded_io.py  ui.py  utils.py
