[tool.poetry]
name = "amaterasu"
version = "0.1.0"
description = ""
authors = ["Iyed Ghedamsi <iyed.ghdemsi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
face_recognition = "^1.2.3"
opencv-python = "^4.1.2"
jupyterlab = "^1.2.4"
pyprojroot = "^0.2.0"
pafy = "^0.5.5"
loguru = "^0.4.0"
sklearn = "^0.0"
youtube-dl = "^2019.12.25"
tqdm = "^4.41.0"
click = "^7.0"
google_images_download = "^2.8.0"
ipywidgets = "^7.5.1"
matplotlib = "^3.1.2"
arabic-reshaper = "^2.0.15"
python-bidi = "^0.4.2"
plotly = "4.4.1"
dash = "1.7.0"
jupyterlab-dash = "0.1.0a3"
streamlit = "^0.52.2"
requests = "^2.22.0"
blinker = "^1.4"
pyinstrument = "^3.1.0"
voila = "^0.1.20"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
isort = "^4.3.21"
pylint = "^2.4.4"
jupyterlab_code_formatter = "^1.0.3"
jupytext = "^1.3.0"
ipdb = "^0.12.3"
pylama = "^7.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
